SPI demo working!
Thanks to https://github.com/MetalPhreak/ESP8266_SPI_Driver for the SPI
driver! I would submodule it, but I needed to put all his function in
flash so I needed to just copy it down.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,12 +1,21 @@
-CC 				:= xtensa-lx106-elf-gcc
-CFLAGS 		:= -I. -mlongcalls -DICACHE_FLASH
-LDLIBS 		:= -nostdlib -Wl,--start-group -lmain -lnet80211 -lwpa -llwip -lpp -lphy -lc -Wl,--end-group -lgcc -ldriver
-LDFLAGS 	:= -Teagle.app.v6.ld
+CC 				:= 	xtensa-lx106-elf-gcc
+CFLAGS 		:= 	-I. \
+							-I../lib/ESP8266_SPI_Driver/include \
+							-mlongcalls \
+							-DICACHE_FLASH \
+							-std=c99 \
+							-Wno-implicit-function-declaration
 
-MAIN 			:= blinky
+LDLIBS 		:= 	-nostdlib -Wl,--start-group -lmain -lnet80211 -lwpa -llwip -lpp -lphy -lc -Wl,--end-group -lgcc -ldriver
+LDFLAGS 	:= 	-Teagle.app.v6.ld
 
-CSRCS 		:= blinky.c
-OBJS 			:= $(patsubst %.c, %.o, $(CSRCS))
+#MAIN			:= 	blinky
+MAIN 			:= 	spi
+MAIN			:=	$(MAIN)_compiled
+
+#CSRCS 		:= 	blinky.c
+CSRCS 		:= 	spi_test.c ../lib/ESP8266_SPI_Driver/driver/spi.c
+OBJS 			:= 	$(patsubst %.c, %.o, $(notdir $(CSRCS)))
 
 # pack
 $(MAIN)-0x00000.bin: $(MAIN)
