--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,4 @@
 *.swp
-*.pyc
-*.eep
-*.elf
-*.hex
-*.lss
-*.lst
-*.map
-*.o
-*.sym
-.dep/
-*.bin
-*_compiled
-build/
+build/*
+sdkconfig*
+compile_commands.json
